--- a/package.json
+++ b/package.json
@@ -60,13 +60,15 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "@svgdotjs/svg.js": "^3.0.16",
     "autosize": "^4.0.2",
-    "swiper": "^5.3.0",
     "emergence.js": "^1.1.2",
     "imask": "^6.0.1",
     "jquery": "^3.4.1",
     "lazyload": "^2.0.0-rc.2",
     "sass-em": "^1.0.3",
+    "svg-path-generator": "^1.1.0",
+    "swiper": "^5.3.0",
     "vue": "^2.6.10",
     "webpack-svgstore-plugin": "^4.1.0"
   }
